Bug 188643 - Unread count not shown if folder has sub-folders open
Summary: Unread count not shown if folder has sub-folders open
Status: CLOSED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: folder list (other bugs)
Version First Reported In: 1.11.1
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-02 10:21 UTC by Szokovacs Robert
Modified: 2009-04-22 21:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Open subfolders (6.39 KB, image/png)
2009-04-02 10:27 UTC, Szokovacs Robert
Details
Closed sub-folders (3.18 KB, image/png)
2009-04-02 10:28 UTC, Szokovacs Robert
Details
Proposed patch (645 bytes, patch)
2009-04-08 20:44 UTC, Szokovacs Robert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Szokovacs Robert 2009-04-02 10:21:00 UTC
Version:           1.11.1 (using KDE 4.2.1)
Installed from:    Ubuntu Packages

The unread count of a folder that has messages _and_ sub-folders is missing when the sub-folders are shown.
Comment 1 Szokovacs Robert 2009-04-02 10:27:47 UTC
Created attachment 32538 [details]
Open subfolders

Show the open state of sub-folders, it should show "1" as unread count, but it don't show anything.
Comment 2 Szokovacs Robert 2009-04-02 10:28:48 UTC
Created attachment 32539 [details]
Closed sub-folders

Shows the closed sub-folder state, it displays "3" as unread count, which is correct.
Comment 3 Szokovacs Robert 2009-04-08 20:44:50 UTC
Created attachment 32706 [details]
Proposed patch

This patch seems to fix this problem. The modification made is based on the setTotalCount() function, right below the modified function. I could find a reason why they behave differently.
Comment 4 Thomas McGuire 2009-04-09 17:30:11 UTC
SVN commit 951543 by tmcguire:

Also show the unread count if the folder has sub-folders open

Patch by Szokovacs Robert <szo@szo.hu>, thank you!

BUG: 188643


 M  +2 -3      foldertreewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=951543
Comment 5 Thomas McGuire 2009-04-22 21:32:33 UTC
SVN commit 957721 by tmcguire:

Backport r951543 by tmcguire from trunk to the 4.2 branch:

Also show the unread count if the folder has sub-folders open

Patch by Szokovacs Robert <szo@szo.hu>, thank you!

CCBUG: 188643



 M  +2 -3      foldertreewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=957721