Also show the unread count if the folder has sub-folders open

Patch by Szokovacs Robert <szo@szo.hu>, thank you!

BUG: 188643

svn path=/trunk/KDE/kdepim/libkdepim/; revision=951543